Add jvm args for error-prone and nullaway